<resources>
    <string name="app_name">Todo</string>
    <string name="title_welcome_format">Welcome to\n%1$s</string>
    <string name="title_welcome_sub">The app to help you do your things.</string>
    <string name="action_next">Next</string>
    <string name="text_create_list_instruction">First, we need to create a list before we can make todo\'s.\nLet\'s give our list a fresh name to get started.</string>
    <string name="default_list_name">New List</string>
    <string name="list_name">List Name</string>
    <string name="todo_title">Title</string>
    <string name="todo_body">Body</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="settings">Settings</string>
    <string name="action_add_list">Add List</string>
    <string name="action_add_todo">Create a new todo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_input_name_for_list">Enter a name for the list</string>
    <string name="title_add_todo">Add Todo</string>
    <string name="title_edit_todo">Edit Todo</string>
    <string name="hint_no_todo">You don\'t seem to have any todos in this list, press the "+" button to create one.</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_save">Save</string>
    <string name="error_title_required">Title is required</string>
    <string name="error_missing_current_list">Cannot find current list</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_complete">Complete</string>
    <string name="action_undo_complete">Undo</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
    <string name="action_rename_list">Rename List</string>
    <string name="action_delete_list">Delete List</string>
    <string name="action_clear_completed_todos">Clear Completed Todos</string>
    <string name="action_show_completed_todos">Show Completed Todos</string>
    <string name="msg_confirm_delete_list_format">Are you sure you want to delete the list %s?</string>
    <string name="msg_confirm_clear_completed_todos">Are you sure you want to clear all completed todos from this list?</string>
    <string name="msg_deleted_todos_format">%s todo(s) deleted</string>
    <string name="action_sort">Sort</string>

    <string-array name="sort_order_group">
        <item name="by_added">Time added</item>
        <item name="by_alpha">Alphabetical</item>
        <item name="by_not_completed">Not completed</item>
    </string-array>
    <string name="title_sort_by">Sort by…</string>
    <string name="msg_no_list_selected">No list is selected</string>
    <string name="msg_cannot_delete_last_list">You cannot delete the last todo list!</string>

    <string name="err_unknown">Unknown error occurred.</string>
    <string name="action_search">Search Todo</string>
    <string name="format_query_notice">Showing search result \'%s\'</string>
    <string name="text_todo_no_result">Nothing here!</string>
    <string name="format_created_time">Created: %s</string>

</resources>