<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rename_list"
        android:title="@string/action_rename_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_list"
        android:title="@string/action_delete_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_completed_todos"
        android:title="@string/action_clear_completed_todos"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_completed_todos"
        android:checkable="true"
        android:title="@string/action_show_completed_todos"
        app:showAsAction="never" />
</menu>